--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "firebase": "^12.0.0",
     "firebase-admin": "^12.7.0",
     "lodash": "^4.17.21",
-    "next": "15.4.4",
+    "next": "^15.4.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
