--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,7 @@
     "background_color": "#f0f9ff",
     "theme_color": "#38bdf8",
     "orientation": "portrait",
+    "gcm_sender_id": "103953800507",
     "icons": [
         {
             "src": "/icons/icon-192x192.png",
